<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    <variable name="UserData"
        type="com.example.asad.layoutdesign.UserData"/>


    </data>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/AliceBlue"
    tools:layout_editor_absoluteY="81dp"
    >

    <TextView
        android:id="@+id/signUpId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="3dp"
        android:text="@{UserData.title}"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/startId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="28dp"
        android:gravity="center"
        android:padding="1dp"
        android:text="@{UserData.subtitle}"
        android:textSize="16sp"

        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="41dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textViewFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@{UserData.name}"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="73dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:weightSum="15"
        android:layout_marginStart="16dp">

        <EditText
            android:id="@+id/editTextfirstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:ems="10"
            android:layout_weight="7.5"
            android:background="@drawable/shapeinput"
            android:hint="@string/first_name3"
            android:padding="5dp"
            android:inputType="text"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="100dp" />

        <EditText
            android:id="@+id/editTextsecondName"
            android:layout_width="0dp"
            android:layout_weight="7.5"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ems="10"
            android:background="@drawable/shapeinput"
            android:padding="5dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="100dp" />
    </LinearLayout>



    <TextView

        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:text="@{UserData.email}"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="156dp" />

    <EditText

        android:id="@+id/editTextemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:background="@drawable/shapeinput"
        android:padding="5dp"
        android:hint="@string/your_email_here"
        android:inputType="textEmailAddress"
        android:text="@{UserData.email2}"

        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="189dp" />

    <TextView

        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:text="@{UserData.password}"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="156dp" />

    <EditText

        android:id="@+id/editTextpassword"
        android:layout_width="match_parent"
        android:layout_marginEnd="14dp"
        android:padding="5dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="14dp"
        android:ems="10"
        android:background="@drawable/shapeinput"
        android:hint="@string/pswrd2"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="189dp" />

    <TextView

        android:id="@+id/textViewPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:text="@{UserData.retypepassword}"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="156dp" />

    <EditText

        android:id="@+id/editTextpassword2"
        android:layout_width="match_parent"
        android:layout_marginEnd="14dp"
        android:padding="5dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="14dp"
        android:ems="10"
        android:background="@drawable/shapeinput"
        android:hint="@string/pswrd"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="189dp" />

    <Button

        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="CheckData"
        android:text="@string/sign_up"

        android:textStyle="bold"
        android:background="@drawable/shapebutton"

        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>


    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textviewTerms"
            android:text="@string/by_accepting_you_are_agreeing_to_the"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/textviewTerms2"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/red"
            android:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="46dp"
        android:weightSum="1"

        android:orientation="vertical">
        <TextView
            android:id="@+id/textviewhaveaccount"
            android:text="@string/already_have_a_account"


            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="0dp" />
        <TextView
            android:id="@+id/textviewhaveaccount2"
            android:text="@string/login"
            android:textColor="@color/red"
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:layout_height="0dp" />

    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
    </layout>